ci: try to fix paths from zkstack

--- a/docker/external-node/Dockerfile
+++ b/docker/external-node/Dockerfile
@@ -15,6 +15,7 @@ ENV RUSTC_WRAPPER=${RUSTC_WRAPPER}
 
 WORKDIR /usr/src/zksync
 COPY . .
+WORKDIR /usr/src/zksync/core
 RUN cargo build --release --bin zksync_external_node --bin block_reverter
 
 FROM ghcr.io/matter-labs/zksync-runtime-base:latest
