--- a/docker/snapshots-creator/Dockerfile
+++ b/docker/snapshots-creator/Dockerfile
@@ -14,7 +14,7 @@ ENV RUSTC_WRAPPER=${RUSTC_WRAPPER}
 
 WORKDIR /usr/src/zksync
 COPY . .
-
+WORKDIR /usr/src/zksync/core
 RUN cargo build --release --bin snapshots_creator
 
 FROM ghcr.io/matter-labs/zksync-runtime-base:latest
