--- a/docker/contract-verifier/Dockerfile
+++ b/docker/contract-verifier/Dockerfile
@@ -16,7 +16,7 @@ ENV RUSTC_WRAPPER=${RUSTC_WRAPPER}
 
 WORKDIR /usr/src/zksync
 COPY . .
-
+WORKDIR /usr/src/zksync/core
 RUN cargo build --release --bin zksync_contract_verifier
 
 FROM ghcr.io/matter-labs/zksync-runtime-base:latest
