--- a/docker/verified-sources-fetcher/Dockerfile
+++ b/docker/verified-sources-fetcher/Dockerfile
@@ -15,7 +15,7 @@ ENV RUSTC_WRAPPER=${RUSTC_WRAPPER}
 
 WORKDIR /usr/src/zksync
 COPY . .
-
+WORKDIR /usr/src/zksync/core
 RUN cargo build --release --bin verified_sources_fetcher
 
 FROM ghcr.io/matter-labs/zksync-runtime-base:latest
