ci: fix linting issues

--- a/.github/workflows/protobuf.yaml
+++ b/.github/workflows/protobuf.yaml
@@ -47,7 +47,10 @@ jobs:
           git checkout $(git merge-base $BASE $HEAD) --recurse-submodules
         working-directory: ./before
       - name: compile before
-        run: cargo check --manifest-path ./core/Cargo.toml --all-targets
+        run: |
+          pwd
+          ls -la
+          cargo check --manifest-path ./core/Cargo.toml --all-targets
         working-directory: ./before
       - name: build before.binpb
         run: >
